--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -116,6 +115,35 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>azure-spring-apps-maven-plugin</artifactId>
+                <version>1.18.0</version>
+                <configuration>
+                    <subscriptionId>76166c26-8928-4542-ab0e-9d85cce4d553</subscriptionId>
+                    <resourceGroup>project-mpp-deploy</resourceGroup>
+                    <clusterName>deploy-be</clusterName>
+                    <appName>backend</appName>
+                    <isPublic>true</isPublic>
+                    <deployment>
+                        <cpu>3</cpu>
+                        <memoryInGB>5</memoryInGB>
+                        <instanceCount>10</instanceCount>
+                        <runtimeVersion>Java 17</runtimeVersion>
+                        <resources>
+                            <resource>
+                                <filtering/>
+                                <mergeId/>
+                                <targetPath/>
+                                <directory>${project.basedir}/target</directory>
+                                <includes>
+                                    <include>*.jar</include>
+                                </includes>
+                            </resource>
+                        </resources>
+                    </deployment>
                 </configuration>
             </plugin>
         </plugins>
