Tried to solve the No 'Access-Control-Allow-Origin' error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.thymeleaf.check-template-location=false
 #1h in milliseconds
 security.jwt.expiration-time=3600000
 
+spring.graphql.cors.allowed-origins=*
+spring.graphql.cors.allowed-headers=*
+spring.graphql.cors.allowed-methods=*
+
 #spring.application.name=MPP_backend
 #
 #spring.jpa.properties.hibernate.format_sql=true
