Added configuration for SSL (self-signed certificate) for HTTPS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,23 @@ spring.graphql.cors.allowed-origins=*
 spring.graphql.cors.allowed-headers=*
 spring.graphql.cors.allowed-methods=*
 
+#configuration for SSL (self-signed certificate) for HTTPS
+
+#server.port: The port on which the application runs. Here we have used port 8443 instead of using the default port 8080
+#server.ssl.key-store: This is the path to the keystore which contains the SSL Certificate.
+#server.ssl.key-store-password: password used to access the keystore.
+#server.ssl.keyStoreType: type of the keystore, it can be PKCS12 or any other keystore type.
+#server.ssl.keyAlias: alias used to identify the key.
+
+server.port=8443
+server.ssl.key-store= keystore.p12
+server.ssl.key-store-password= 6030416314000deni#
+server.ssl.key-store-type= PKCS12
+server.ssl.key-alias= mycert
+
+
+#configuration for the deployment of the BE on Azure
+
 #spring.application.name=MPP_backend
 #
 #spring.jpa.properties.hibernate.format_sql=true
